transition elements project

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "resolveJsonModule": true,
     "strict": true,
     "downlevelIteration": true
-  }
+  }, 
+  "include": ["node_modules/react-native-redash/lib/typescript/v1/index.d.ts"]
 }
